--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - rustler-precompiled
+      - rustler-precompiled-2
     tags:
       - '*'
 
@@ -19,10 +19,12 @@ jobs:
         job:
           - { target: arm-unknown-linux-gnueabihf , os: ubuntu-20.04 , use-cross: true }
           - { target: aarch64-unknown-linux-gnu   , os: ubuntu-20.04 , use-cross: true }
+          - { target: aarch64-unknown-linux-musl  , os: ubuntu-20.04 , use-cross: true }
           - { target: aarch64-apple-darwin        , os: macos-11      }
           - { target: riscv64gc-unknown-linux-gnu , os: ubuntu-20.04 , use-cross: true }
           - { target: x86_64-apple-darwin         , os: macos-11      }
           - { target: x86_64-unknown-linux-gnu    , os: ubuntu-20.04  }
+          - { target: x86_64-unknown-linux-musl   , os: ubuntu-20.04 , use-cross: true }
           - { target: x86_64-pc-windows-gnu       , os: windows-2019  }
           - { target: x86_64-pc-windows-msvc      , os: windows-2019  }
 
