--- a/native/exkeccak/.cargo/config
+++ b/native/exkeccak/.cargo/config
@@ -16,5 +16,10 @@ rustflags = [
   "-C", "target-feature=-crt-static"
 ]
 
+[target.aarch64-unknown-linux-musl]
+rustflags = [
+  "-C", "target-feature=-crt-static"
+]
+
 [profile.release]
 lto = true
