--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - update-rusler-version-in-cargo
     tags:
       - '*'
 
@@ -64,4 +65,4 @@ jobs:
       with:
         files: |
           ${{ steps.build-crate.outputs.file-path }}
-      if: startsWith(github.ref, 'refs/tags/')
+      if: startsWith(github.ref, 'refs/heads/main') || startsWith(github.ref, 'refs/tags/') || startsWith(github.ref, 'refs/heads/update-rusler-version-in-cargo')
