--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - update-rustler-version-in-cargo
     tags:
       - '*'
 
@@ -65,4 +64,4 @@ jobs:
       with:
         files: |
           ${{ steps.build-crate.outputs.file-path }}
-      if: startsWith(github.ref, 'refs/heads/main') || startsWith(github.ref, 'refs/tags/') || startsWith(github.ref, 'refs/heads/update-rustler-version-in-cargo')
+      if: startsWith(github.ref, 'refs/tags/')
