--- a/native/exkeccak/.cargo/config
+++ b/native/exkeccak/.cargo/config
@@ -1,13 +1,7 @@
-[target.x86_64-apple-darwin]
+[target.'cfg(target_os = "macos")']
 rustflags = [
-    "-C", "link-arg=-undefined",
-    "-C", "link-arg=dynamic_lookup",
-]
-
-[target.aarch64-apple-darwin]
-rustflags = [
-    "-C", "link-arg=-undefined",
-    "-C", "link-arg=dynamic_lookup",
+  "-C", "link-arg=-undefined",
+  "-C", "link-arg=dynamic_lookup",
 ]
 
 # See https://github.com/rust-lang/rust/issues/59302
@@ -16,10 +10,6 @@ rustflags = [
   "-C", "target-feature=-crt-static"
 ]
 
-[target.aarch64-unknown-linux-musl]
-rustflags = [
-  "-C", "target-feature=-crt-static"
-]
-
+# Provides a small build size, but takes more time to build.
 [profile.release]
 lto = true
