--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,13 +45,14 @@ jobs:
 
     - name: Build the project
       id: build-crate
-      uses: philss/rustler-precompiled-action@v1.0.0
+      uses: philss/rustler-precompiled-action@v1.0.1
       with:
         project-name: exkeccak
         project-version: ${{ env.PROJECT_VERSION }}
         target: ${{ matrix.job.target }}
         nif-version: ${{ matrix.nif }}
         use-cross: ${{ matrix.job.use-cross }}
+        cross-version: ${{ matrix.job.cross-version || 'v0.2.4' }}
         project-dir: "native/exkeccak"
 
     - name: Artifact upload
