--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
           - { target: x86_64-unknown-linux-musl   , os: ubuntu-20.04 , use-cross: true }
           - { target: x86_64-pc-windows-gnu       , os: windows-2019  }
           - { target: x86_64-pc-windows-msvc      , os: windows-2019  }
+          - { target: x86_64-unknown-freebsd, os: ubuntu-22.04, use-cross: true, cross-version: v0.2.5 }
 
     steps:
     - name: Checkout source code
@@ -44,13 +45,14 @@ jobs:
 
     - name: Build the project
       id: build-crate
-      uses: philss/rustler-precompiled-action@v1.0.0
+      uses: philss/rustler-precompiled-action@v1.0.1
       with:
         project-name: exkeccak
         project-version: ${{ env.PROJECT_VERSION }}
         target: ${{ matrix.job.target }}
         nif-version: ${{ matrix.nif }}
         use-cross: ${{ matrix.job.use-cross }}
+        cross-version: ${{ matrix.job.cross-version || 'v0.2.4' }}
         project-dir: "native/exkeccak"
 
     - name: Artifact upload
