--- a/native/exkeccak/Cargo.toml
+++ b/native/exkeccak/Cargo.toml
@@ -12,3 +12,7 @@ crate-type = ["dylib"]
 [dependencies]
 rustler = "0.36"
 tiny-keccak = { version = "2.0", features = ["keccak"] }
+
+[features]
+nif_version_2_15 = ["rustler/nif_version_2_15"]
+nif_version_2_16 = ["rustler/nif_version_2_16"]
